--- a/concourse/pipelines/templates/pxf-tpl.yml
+++ b/concourse/pipelines/templates/pxf-tpl.yml
@@ -15,6 +15,7 @@ groups:
       - test_pxf_hdp_ubuntu18
 {% endif %}
       - test_pxf_hdp_multinode_gpdb
+      - test_pxf_secure_multinode_gpdb
       - test_pxf_s3_no_impersonation
       - test_pxf_s3_with_impersonation
       - test_pxf_hdp_secure_with_impersonation
@@ -47,6 +48,7 @@ groups:
       - test_pxf_hdp_ubuntu18
 {% endif %}
       - test_pxf_hdp_multinode_gpdb
+      - test_pxf_secure_multinode_gpdb
 {% if pipeline_type == "release" %}
       - test_pxf_hdp_centos6
       - test_pxf_mapr_centos6
@@ -105,6 +107,43 @@ ccp_destroy_anchor: &ccp_destroy
       terraform_source: ccp_src/google/
     get_params:
       action: destroy
+
+dataproc_destroy_anchor: &dataproc_destroy
+  do:
+  - task: cleanup_dataproc
+    config:
+      run:
+        path: pxf_src/concourse/scripts/cleanup_dataproc_cluster.bash
+      inputs:
+        - name: pxf_src
+        - name: dataproc_env_files
+      platform: linux
+    image: ccp-7
+    params:
+      GOOGLE_CREDENTIALS: {{google-service-account-key}}
+      GOOGLE_ZONE: {{google-zone}}
+
+dataproc_timed_destroy_anchor: &dataproc_timed_destroy
+  do:
+  - task: debug_sleep
+    image: ccp-7
+    config:
+      run:
+        path: /bin/sleep
+        args: [{{dataproc-destroy-timeout}}]
+      platform: linux
+  - task: cleanup_dataproc
+    config:
+      run:
+        path: pxf_src/concourse/scripts/cleanup_dataproc_cluster.bash
+      platform: linux
+      inputs:
+        - name: pxf_src
+        - name: dataproc_env_files
+    image: ccp-7
+    params:
+      GOOGLE_CREDENTIALS: {{google-service-account-key}}
+      GOOGLE_ZONE: {{google-zone}}
 
 ## ======================================================================
 ## RESOURCE TYPES
@@ -790,6 +829,23 @@ jobs:
 {% if pipeline_type == "pxf" %}
         TARGET_OS: centos
 {% endif %}
+  - task: setup_pxf
+    input_mapping:
+      terraform: terraform_gpdb
+      bin_gpdb: gpdb_binary
+    file: pxf_src/concourse/tasks/install_pxf.yml
+    image: ccp-7
+    params:
+      AWS_ACCESS_KEY_ID: {{tf-machine-access-key-id}}
+      AWS_SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
+      AWS_DEFAULT_REGION: {{aws-region}}
+      BUCKET_PATH: {{tf-bucket-path}}
+      BUCKET_NAME: {{tf-bucket-name}}
+      CLOUD_PROVIDER: google
+      IMPERSONATION: {{enable-impersonation-multinode}}
+      INSTALL_GPHDFS: false
+      PLATFORM: centos7
+      PXF_JVM_OPTS: {{pxf-jvm-opts}}
   - task: test_pxf_multinode
     input_mapping:
       bin_gpdb: gpdb_binary
@@ -802,6 +858,113 @@ jobs:
       SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
       IMPERSONATION: {{enable-impersonation-multinode}}
       GROUP: gpdb,proxy
+      PXF_JVM_OPTS: {{pxf-jvm-opts}}
+      TARGET_OS: centos
+{% if acceptance %}
+      ACCEPTANCE: true
+{% endif %}
+
+- name: test_pxf_secure_multinode_gpdb
+  max_in_flight: 2
+  plan:
+  - aggregate:
+    - get: ccp_src
+    - get: gpdb_src
+      passed:
+      - compile_pxf
+{% if compile_gpdb %}
+      - compile_gpdb_centos6
+{% endif %}
+    - get: gpdb_binary
+      resource: bin_gpdb_centos6
+{% if compile_gpdb %}
+      passed:
+      - compile_gpdb_centos6
+{% endif %}
+    - get: pxf_src
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: pxf_tarball
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: ccp-7
+    - get: gpdb-pxf-dev-centos6-hdp-server
+  - aggregate:
+    - do:
+      - put: terraform_gpdb
+        resource: terraform
+        params:
+          action: create
+          delete_on_failure: true
+          generate_random_name: true
+          terraform_source: ccp_src/google/
+          vars:
+            PLATFORM: centos7
+            number_of_nodes: {{number_of_gpdb_nodes}}
+            segments_per_host: 4
+            instance_type: n1-standard-4
+            ccp_reap_minutes: 120
+      - task: Generate Greenplum Cluster
+        input_mapping:
+          terraform: terraform_gpdb
+        file: ccp_src/ci/tasks/gen_cluster.yml
+        image: ccp-7
+        params:
+          AWS_ACCESS_KEY_ID: {{tf-machine-access-key-id}}
+          AWS_SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
+          AWS_DEFAULT_REGION: {{aws-region}}
+          BUCKET_PATH: {{tf-bucket-path}}
+          BUCKET_NAME: {{tf-bucket-name}}
+          PLATFORM: centos7
+          CLOUD_PROVIDER: google
+      - task: intialize_greenplum
+        file: ccp_src/ci/tasks/gpinitsystem.yml
+    - task: Generate Hadoop Cluster
+      file: pxf_src/concourse/tasks/install_dataproc.yml
+      image: ccp-7
+      params:
+        GOOGLE_CREDENTIALS: {{google-service-account-key}}
+        GOOGLE_PROJECT_ID: {{google-project-id}}
+        GOOGLE_ZONE: {{google-zone}}
+        IMAGE_VERSION: {{dataproc-image-version}}
+        KERBEROS: {{kerberos-enabled}}
+  - task: setup_pxf
+    input_mapping:
+      terraform: terraform_gpdb
+      bin_gpdb: gpdb_binary
+    file: pxf_src/concourse/tasks/install_pxf.yml
+    image: ccp-7
+    params:
+      AWS_ACCESS_KEY_ID: {{tf-machine-access-key-id}}
+      AWS_SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
+      AWS_DEFAULT_REGION: {{aws-region}}
+      BUCKET_PATH: {{tf-bucket-path}}
+      BUCKET_NAME: {{tf-bucket-name}}
+      CLOUD_PROVIDER: google
+      IMPERSONATION: {{enable-impersonation-multinode}}
+      INSTALL_GPHDFS: false
+      KERBEROS: {{kerberos-enabled}}
+      PLATFORM: centos7
+      PXF_JVM_OPTS: {{pxf-jvm-opts}}
+  - task: test_pxf_multinode
+    input_mapping:
+      bin_gpdb: gpdb_binary
+    on_success:
+      <<: *ccp_destroy
+      <<: *dataproc_destroy
+    on_failure:
+      <<: *dataproc_timed_destroy
+    image: gpdb-pxf-dev-centos6-hdp-server
+    file: pxf_src/concourse/tasks/test_pxf_multinode.yml
+    params:
+      ACCESS_KEY_ID: {{tf-machine-access-key-id}}
+      SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
+      HIVE_VERSION: 2
+      IMPERSONATION: {{enable-impersonation-multinode}}
+      KERBEROS: {{kerberos-enabled}}
+      GROUP: security
       PXF_JVM_OPTS: {{pxf-jvm-opts}}
       TARGET_OS: centos
 {% if acceptance %}
@@ -1102,6 +1265,7 @@ jobs:
     - test_pxf_hdp_secure_with_impersonation
     - test_pxf_no_impersonation
     - test_pxf_hdp_multinode_gpdb
+    - test_pxf_secure_multinode_gpdb
     trigger: true
   - put: pxf_tarball_stable
     params:
@@ -1131,6 +1295,7 @@ jobs:
     - test_pxf_hdp_secure_no_impersonation
     - test_pxf_no_impersonation
     - test_pxf_hdp_multinode_gpdb
+    - test_pxf_secure_multinode_gpdb
     trigger: true
   - get: gpdb_release
   - get: pxf_src
@@ -1153,6 +1318,7 @@ jobs:
     - test_pxf_hdp_secure_no_impersonation
     - test_pxf_no_impersonation
     - test_pxf_hdp_multinode_gpdb
+    - test_pxf_secure_multinode_gpdb
   - task: package_pxf_rc
     config:
       inputs:
