--- a/concourse/settings/pxf-multinode-params.yml
+++ b/concourse/settings/pxf-multinode-params.yml
@@ -4,3 +4,6 @@ tf-bucket-path: clusters-google/
 no_of_files: 10000
 pxf-jvm-opts: "-Xmx512m -Xms512m"
 hadoop-nodes: 3
+kerberos-enabled: true
+dataproc-destroy-timeout: 3600
+dataproc-image-version: "1.4.12"
