--- a/concourse/tasks/install_hadoop.yml
+++ b/concourse/tasks/install_hadoop.yml
@@ -6,6 +6,8 @@ inputs:
   - name: pxf_src
   - name: pxf_tarball
 params:
+  SECRET_ACCESS_KEY:
+  ACCESS_KEY_ID:
   IMPERSONATION: true
   TARGET_OS: centos
 run:
