Use dataproc image version 1.4.12-debian9
This pins the version of Hive to 2.3.5 [1]. Debian is the default, but
when we use `--image-version 1.4.12` we get an error, whereas including
'-debian9' at the end works. The docs claim that including subminor
version should work [2].

[1]https://cloud.google.com/dataproc/docs/concepts/versioning/dataproc-release-1.4
[2]https://cloud.google.com/dataproc/docs/concepts/versioning/overview#selecting_versions

Co-authored-by: Oliver Albertini <oalbertini@pivotal.io>
Co-authored-by: Francisco Guerrero <aguerrero@pivotal.io>

--- a/concourse/settings/pxf-multinode-params.yml
+++ b/concourse/settings/pxf-multinode-params.yml
@@ -6,4 +6,4 @@ pxf-jvm-opts: "-Xmx512m -Xms512m"
 hadoop-nodes: 3
 kerberos-enabled: true
 dataproc-destroy-timeout: 3600
-dataproc-image-version: "1.4.12"
+dataproc-image-version: "1.4.12-debian9"
