--- a/concourse/pipelines/templates/pxf-tpl.yml
+++ b/concourse/pipelines/templates/pxf-tpl.yml
@@ -258,25 +258,71 @@ resources:
     repository: pivotaldata/ccp
     tag: 7
 
+{% if compile_gpdb %}
 - name: bin_gpdb_centos6
   type: s3
   source:
     access_key_id: {{bucket-access-key-id}}
     region_name: {{aws-region}}
     secret_access_key: {{bucket-secret-access-key}}
-{% if compile_gpdb %}
     bucket: gpdb5-concourse-builds-dev
     versioned_file: {{bin_gpdb_centos_versioned_file}}
 {% elif pipeline_type == "release" %}
-    bucket: {{gpdb-stable-builds-bucket-name}}
 {% if gpdb_branch == '5X_STABLE' %}
+- name: bin_gpdb_centos6
+  type: s3
+  source:
+    access_key_id: {{bucket-access-key-id}}
+    region_name: {{aws-region}}
+    secret_access_key: {{bucket-secret-access-key}}
+    bucket: {{gpdb-stable-builds-bucket-name}}
     versioned_file: release_candidates/bin_gpdb_centos6/gpdb5/bin_gpdb.tar.gz
 {% else %}
-    versioned_file: release_candidates/bin_gpdb_centos6/gpdb6/debug/bin_gpdb.tar.gz
+- name: bin_gpdb_centos6
+  type: gcs
+  source:
+    bucket: ((gcs-bucket-resources-prod))
+    json_key: ((concourse-gcs-resources-service-account-key))
+    regexp: server/published/gpdb6/server-rc-(.*)-rhel6_x86_64.tar.gz
 {% endif %}
 {% elif pipeline_type == "pxf" %}
+- name: bin_gpdb_centos6
+  type: s3
+  source:
+    access_key_id: {{bucket-access-key-id}}
+    region_name: {{aws-region}}
+    secret_access_key: {{bucket-secret-access-key}}
     bucket: {{icw_green_bucket}}
     versioned_file: bin_gpdb_centos6/gpdb_branch_((gpdb-branch))/icw_green/bin_gpdb.tar.gz
+{% endif %}
+
+{% if pipeline_type == "release" %}
+{% if gpdb_branch == '5X_STABLE' %}
+- name: bin_gpdb_centos7
+  type: s3
+  source:
+    access_key_id: {{bucket-access-key-id}}
+    region_name: {{aws-region}}
+    secret_access_key: {{bucket-secret-access-key}}
+    bucket: {{gpdb-stable-builds-bucket-name}}
+    versioned_file: release_candidates/bin_gpdb_centos7/gpdb5/bin_gpdb.tar.gz
+{% else %}
+- name: bin_gpdb_centos7
+  type: gcs
+  source:
+    bucket: ((gcs-bucket-resources-prod))
+    json_key: ((concourse-gcs-resources-service-account-key))
+    regexp: server/published/gpdb6/server-rc-(.*)-rhel7_x86_64.tar.gz
+{% endif %}
+{% elif pipeline_type == "pxf" %}
+- name: bin_gpdb_centos7
+  type: s3
+  source:
+    access_key_id: {{bucket-access-key-id}}
+    region_name: {{aws-region}}
+    secret_access_key: {{bucket-secret-access-key}}
+    bucket: {{icw_green_bucket}}
+    versioned_file: bin_gpdb_centos7/gpdb_branch_((gpdb-branch))/icw_green/bin_gpdb.tar.gz
 {% endif %}
 
 {% if gpdb_type == "5X_STABLE" %}
@@ -581,7 +627,7 @@ jobs:
       - compile_gpdb_centos6
 {% endif %}
     - get: bin_gpdb
-      resource: bin_gpdb_centos6
+      resource: bin_gpdb_centos7
 {% if compile_gpdb %}
       passed:
         - compile_gpdb_centos6
