Cleanup dataproc cluster when setup fails
We have to destroy the dataproc cluster when setup_pxf fails, and we
should use a timeout in case we need to debug.

Also, regenerate release pipelines.

Authored-by: Oliver Albertini <oalbertini@pivotal.io>

--- a/concourse/pipelines/templates/pxf-tpl.yml
+++ b/concourse/pipelines/templates/pxf-tpl.yml
@@ -994,6 +994,8 @@ jobs:
       KERBEROS: {{kerberos-enabled}}
       PLATFORM: centos7
       PXF_JVM_OPTS: {{pxf-jvm-opts}}
+    on_failure:
+      <<: *dataproc_timed_destroy
   - task: test_pxf_multinode
     input_mapping:
       bin_gpdb: gpdb_binary
