--- a/concourse/pipelines/templates/pxf-tpl.yml
+++ b/concourse/pipelines/templates/pxf-tpl.yml
@@ -314,15 +314,6 @@ resources:
     json_key: ((concourse-gcs-resources-service-account-key))
     regexp: server/published/gpdb6/server-rc-(.*)-rhel7_x86_64.tar.gz
 {% endif %}
-{% elif pipeline_type == "pxf" %}
-- name: bin_gpdb_centos7
-  type: s3
-  source:
-    access_key_id: {{bucket-access-key-id}}
-    region_name: {{aws-region}}
-    secret_access_key: {{bucket-secret-access-key}}
-    bucket: {{icw_green_bucket}}
-    versioned_file: bin_gpdb_centos7/gpdb_branch_((gpdb-branch))/icw_green/bin_gpdb.tar.gz
 {% endif %}
 
 {% if gpdb_type == "5X_STABLE" %}
@@ -627,7 +618,11 @@ jobs:
       - compile_gpdb_centos6
 {% endif %}
     - get: bin_gpdb
+{% if pipeline_type == "release" %}
       resource: bin_gpdb_centos7
+{% else %}
+      resource: bin_gpdb_centos6
+{% endif %}
 {% if compile_gpdb %}
       passed:
         - compile_gpdb_centos6
