Make JDBC profile not fail when MAPR JAR files override default Hadoop ones (#228)
* put mapr pipeline back into dev, added test groups to mapr test

* provide AWS creds, do not use MAPR's hadoop-common JAR

* do not include hadoop-auth form MAPR

* restore MAPR setup, add JDBC test group

* re-implemented Configuration.getPropsWithPrefix

* removed AWS creds from MAPR job

* try flushing hdfs blocks to datanodes during dataprep

* write empty file as a separate file

* remove unnecessary hflush()

* add mapr test job to gate artifact promotion

* update generated release pipelines

* updated release pipeline files

--- a/concourse/pipelines/templates/pxf-tpl.yml
+++ b/concourse/pipelines/templates/pxf-tpl.yml
@@ -22,9 +22,9 @@ groups:
       - test_pxf_no_impersonation
       - test_pxf_hdp_multinode_gpdb
       - test_pxf_hdp_centos7_java11
+      - test_pxf_mapr_centos6
 {% if pipeline_type == "release" %}
       - test_pxf_hdp_centos6
-      - test_pxf_mapr_centos6
       - test_pxf_adl
       - test_pxf_gs
       - test_pxf_minio
@@ -49,9 +49,9 @@ groups:
 {% endif %}
       - test_pxf_hdp_multinode_gpdb
       - test_pxf_secure_multinode_gpdb
+      - test_pxf_mapr_centos6
 {% if pipeline_type == "release" %}
       - test_pxf_hdp_centos6
-      - test_pxf_mapr_centos6
 {% endif %}
 
   - name: cloud
@@ -224,13 +224,11 @@ resources:
     repository: pivotaldata/gpdb-pxf-dev
     tag: centos7-hdp-server
 
-{% if pipeline_type == "release" %}
 - name: gpdb-pxf-dev-centos6-mapr-image
   type: docker-image
   source:
     repository: pivotaldata/gpdb-pxf-dev
     tag: centos6-mapr-server
-{% endif %}
 
 {% if gpdb_type == "5X_STABLE" %}
 - name: gpdb-pxf-dev-ubuntu16-hdp-server
@@ -568,6 +566,7 @@ jobs:
 {% if acceptance %}
       ACCEPTANCE: true
 {% endif %}
+{% endif %}
 
 - name: test_pxf_mapr_centos6
   plan:
@@ -598,14 +597,13 @@ jobs:
     file: pxf_src/concourse/tasks/test_pxf.yml
     image: gpdb-pxf-dev-centos6-mapr-image
     params:
-      GROUP: hcfs
+      GROUP: hcfs,jdbc
       TEST_ENV: {{test-env}}
       HADOOP_CLIENT: MAPR
       TARGET_OS: centos
       TARGET_OS_VERSION: 6
 {% if acceptance %}
       ACCEPTANCE: true
-{% endif %}
 {% endif %}
 
 - name: test_pxf_hdp_centos7_java11
@@ -1297,6 +1295,7 @@ jobs:
   - get: pxf_tarball
     passed:
     - test_pxf_cdh_centos6
+    - test_pxf_mapr_centos6
     - test_pxf_hdp_centos7_java11
 {% if gpdb_type == "5X_STABLE" %}
     - test_pxf_hdp_ubuntu16
@@ -1323,7 +1322,7 @@ jobs:
     - test_pxf_hdp_centos6
     - test_pxf_hdp_centos7_java11
     - test_pxf_cdh_centos6
-    #- test_pxf_mapr_centos6
+    - test_pxf_mapr_centos6
 {% if gpdb_type == "5X_STABLE" %}
     - test_pxf_hdp_ubuntu16
 {% else %}
@@ -1346,12 +1345,12 @@ jobs:
     - test_pxf_hdp_centos6
     - test_pxf_hdp_centos7_java11
     - test_pxf_cdh_centos6
+    - test_pxf_mapr_centos6
 {% if gpdb_type == "5X_STABLE" %}
     - test_pxf_hdp_ubuntu16
 {% else %}
     - test_pxf_hdp_ubuntu18
 {% endif %}
-    #- test_pxf_mapr_centos6
     - test_pxf_adl
     - test_pxf_gs
     - test_pxf_minio
